<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_connect">
        <EditTextPreference
            android:title="@string/pref_connect_device_name_title"
            android:summary="@string/pref_connect_device_name_summary"
            android:defaultValue="My Android Phone"
            android:key="pref_connect_device_name"
            android:dialogTitle="@string/pref_connect_device_name_dialog_title"/>
        <EditTextPreference
            android:title="@string/pref_connect_serveraddress_title"
            android:summary="@string/pref_connect_serveraddress_summary"
            android:defaultValue=""
            android:key="pref_connect_address"
            android:dialogTitle="@string/pref_connect_serveraddress_dialog_title"/>
        <CheckBoxPreference
            android:title="@string/pref_connect_offline_title"
            android:defaultValue="false"
            android:summary="@string/pref_connect_offline_summary"
            android:key="pref_connect_offline"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_visual">
        <ListPreference
            android:title="@string/pref_screen_mode"
            android:summary="@string/pref_screen_mode_summary"
            android:key="pref_screen_mode"
            android:defaultValue="0"
            android:entries="@array/screen_mode"
            android:entryValues="@array/screen_mode_values"/>
        <CheckBoxPreference
            android:title="@string/pref_disable_splash_title"
            android:summary="@string/pref_disable_splash_summary"
            android:defaultValue="false"
            android:key="pref_disable_splash"/>
    </PreferenceCategory>
</PreferenceScreen>
