<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/deviceParameterView">

    <GridLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/deviceManager_GridLayout"
        android:useDefaultMargins="true"
        android:columnCount="2"
        android:clickable="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/device_manager_title"
            android:id="@+id/deviceManager_Title"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/device_manager_device"
            android:id="@+id/deviceManager_txDevice"
            android:layout_row="1"
            android:layout_column="0"
            android:focusable="false"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_manager_select"
            android:id="@+id/deviceManager_btnDevice"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/device_manager_count"
            android:id="@+id/deviceManager_txCount"
            android:layout_row="2"
            android:layout_column="0"
            android:focusable="false"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/deviceManager_editCount"
            android:layout_row="2"
            android:layout_column="1"
            android:text="1"
            android:phoneNumber="true"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/device_manager_name"
            android:id="@+id/deviceManager_txName"
            android:layout_row="3"
            android:layout_column="0"
            android:focusable="false"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/deviceManager_editName"
            android:layout_row="3"
            android:layout_column="1"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/device_manager_dmx_settings"
            android:id="@+id/deviceManager_txDMXSettings"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:focusable="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/device_manager_start_address"
            android:id="@+id/deviceManager_txStartAddress"
            android:layout_row="5"
            android:layout_column="0"
            android:focusable="false"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/deviceManager_editAddress"
            android:layout_row="5"
            android:layout_column="1"
            android:phoneNumber="true"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/device_manager_space"
            android:id="@+id/deviceManager_txSpace"
            android:layout_row="6"
            android:layout_column="0"
            android:focusable="false"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/deviceManager_editSpace"
            android:layout_row="6"
            android:layout_column="1"
            android:text="0"
            android:singleLine="true"
            android:password="false"
            android:phoneNumber="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/device_manager_group_settings"
            android:id="@+id/deviceManager_txGroupSettings"
            android:layout_row="7"
            android:layout_column="0"
            android:focusable="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/device_manager_autogenerate_group"
            android:id="@+id/deviceManager_txAutogenerateGroup"
            android:layout_row="8"
            android:layout_column="0"
            android:focusable="false"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/deviceManager_btnAutogenerateGroup"
            android:layout_row="8"
            android:layout_column="1"
            android:checked="false"
            android:enabled="false"
            android:focusable="false"
            android:textOff="@string/off"
            android:textOn="@string/on"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/device_manager_group_name"
            android:id="@+id/deviceManager_txGroupName"
            android:layout_row="9"
            android:layout_column="0"
            android:focusable="false"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/deviceManager_editGroupName"
            android:layout_row="9"
            android:layout_column="1"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/device_manager_repeat_settings"
            android:id="@+id/deviceManager_txRepeatSettings"
            android:layout_row="10"
            android:layout_column="0"
            android:focusable="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/device_manager_repeat"
            android:id="@+id/deviceManager_txRepeat"
            android:layout_row="11"
            android:layout_column="0"
            android:focusable="false"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/deviceManager_editRepeat"
            android:layout_row="11"
            android:layout_column="1"
            android:text="1"
            android:singleLine="true"
            android:password="false"
            android:phoneNumber="true"/>
    </GridLayout>
</ScrollView>