<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/optic_fragment"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center"
              android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginRight="6dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/optic_zoom_fader_text">

            <de.dmxcontrol.widget.FaderVerticalControl
                android:id="@+id/optic_zoom_fader"
                android:layout_width="fill_parent"
                android:background="@drawable/border_normal_layer_transparent"
                android:layout_height="fill_parent"/>
        </LinearLayout>

        <TextView
            android:id="@+id/optic_zoom_fader_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Small"
            android:text="@string/optic_fragment_zoom"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:singleLine="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginRight="6dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/optic_focus_fader_text">

            <de.dmxcontrol.widget.FaderVerticalControl
                android:id="@+id/optic_focus_fader"
                android:layout_width="fill_parent"
                android:background="@drawable/border_normal_layer_transparent"
                android:layout_height="fill_parent"/>
        </LinearLayout>

        <TextView
            android:id="@+id/optic_focus_fader_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Small"
            android:text="@string/optic_fragment_focus"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:singleLine="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginRight="6dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/optic_iris_fader_text">

            <de.dmxcontrol.widget.FaderVerticalControl
                android:id="@+id/optic_iris_fader"
                android:layout_width="fill_parent"
                android:background="@drawable/border_normal_layer_transparent"
                android:layout_height="fill_parent"/>
        </LinearLayout>

        <TextView
            android:id="@+id/optic_iris_fader_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Small"
            android:text="@string/optic_fragment_iris"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:singleLine="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginRight="6dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/optic_frost_fader_text">

            <de.dmxcontrol.widget.FaderVerticalControl
                android:id="@+id/optic_frost_fader"
                android:layout_width="fill_parent"
                android:background="@drawable/border_normal_layer_transparent"
                android:layout_height="fill_parent"/>
        </LinearLayout>

        <TextView
            android:id="@+id/optic_frost_fader_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Small"
            android:text="@string/optic_fragment_frost"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:singleLine="true"/>
    </RelativeLayout>

</LinearLayout>